chore: include new script to run unit and integration tests all together

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "build": "rimraf ./lib/* && tsc",
+    "test": "jest --config ./jest.json --passWithNoTests",
     "test:unit": "jest --config ./jest.json --passWithNoTests --testPathPattern=src",
     "test:integration": "jest --config ./jest.json --passWithNoTests --run-in-band --testPathPattern=tests"
   },
