chore: update versions of core packages

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongodb": "^5.2.0"
   },
   "dependencies": {
-    "@thomazmz/core-context": "^0.2.8"
+    "@thomazmz/core-context": "^0.2.25",
+    "@thomazmz/core-utils": "^0.2.24"
   }
 }
